<resources>
    <string name="app_name">TestTask</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gamelogo">gamelogo</string>
    <string name="Play">Играть</string>
    <string name="Privacy_policy">Политика конфиденциальности</string>
    <string name="Settings">Настройки</string>
    <string name="coins">Coins</string>
    <string name="time">00:00:00</string>
    <string name="coins_earned">%s</string>
    <string name="reward_text">Reward: %s coins</string>
    <string name="description_game">Описание игры: ваш текст здесь</string>
    <string name="cards">cards</string>
    <string name="double_reward">X2</string>
    <string name="home">Home</string>
    <string name="congratulations">Congratulations!</string>
    <string name="Endgame">End game</string>
    <string name="home_button_description" />
</resources>