<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <!-- Секундомер -->
    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/time" />

    <!-- Количество валюты -->
    <TextView
        android:id="@+id/currencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@id/chronometer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reward_text" />

    <!-- Игровая сетка -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gameRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currencyTextView"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center" />


    <!-- Описание игры -->
    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/gameRecyclerView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/description_game" />

    <Button
        android:id="@+id/endGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Endgame"
        android:layout_below="@id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
