<!-- res/layout/end_game_popup.xml -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Congratulations text -->
    <TextView
        android:id="@+id/congratulationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"/>

    <!-- Reward text with white background -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/rewardText"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/reward_text"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <!-- Double Reward Button -->
        <Button
            android:id="@+id/doubleRewardButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/material_dynamic_neutral40"
            android:text="@string/double_reward"
            android:textColor="#BBDEFB"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_button_description"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:src="@drawable/home"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

</LinearLayout>
